# DroneWars

./: .gitignore  CMakeLists.txt  Doxyfile  DroneWarsLog.ini  DroneWarsLog.properties  FleetFrame.html  PlanetFrame.html  README.md  blocklyFleetDefaultCode.xml  blocklyPlanetDefaultCode.xml  fleetScript.lua  format.css  frame.html  planetScript.lua
FR/: DroneWars.po
FR/API_fichiers/: filelist.xml  props0002.xml
FR/LC_MESSAGES/: DroneWars.po
VS2010/: bit_them_all.opensdf  bit_them_all.sln  bit_them_all.vcxproj
VS2010/DroneWars/: DroneWars.vcxproj  DroneWars.vcxproj.filters
VS2010/UT_Polua/: main.cpp  test_SLB.vcxproj  test_SLB.vcxproj.filters
blockly_adds/generators/: lua.js
blockly_adds/generators/lua/: lists.js  logic.js  math.js  procedures.js  text.js  variables.js
blockly_adds/language/common/: dronewars.js  dronewars_Coord.js  dronewars_Fleet.js  dronewars_FleetAction.js  dronewars_Planet.js  dronewars_PlanetAction.js  dronewars_RessourceSet.js
blockly_adds/language/en/: dronewars.js
blockly_adds/language/fr/: _messages.js  dronewars.js
fr_FR/: API.htm
fr_FR/LC_MESSAGES/: DroneWars.po  update_mo.bat  update_mo.sh
frontend/: .project  .pydevproject  clearDataBase.bat  clearDataBase.py  django-admin.py  getClient.py  makemessages.bat  manage.py  runserver.bat  runserver.sh  syncdb.bat
frontend/DroneWars_frontend/: settings.py  urls.py  wsgi.py
frontend/Game/: TranslationTools.py  community_views.py  info_views.py  models.py  tests.py  views.py
frontend/Game/templatetags/: tmp_filters.py
frontend/locale/fr/LC_MESSAGES/: django.po  update_mo.bat
frontend/template/: account.html  alliance.html  base.html  buildingsview.html  cannonsview.html  codesview.html  create_message.html  fleetsview.html  fleetview.html  friendships.html  index.html  ingame_base.html  message_list.html  planetsview.html  planetview.html  report_func.html  reportsview.html  scoreview.html  shipsview.html  skillsview.html
frontend/template/Game/: ticket_form.html  ticket_list.html
frontend/template/codesview/: blockly.html  blockly_fleet.html  blockly_planet.html  text.html
src/: BTAApplication.cpp  BTAApplication.h  Controler.h  DataBase.cpp  DataBase.h  Editor.cpp  Editor.h  Engine.cpp  Engine.h  EngineServerHandler.cpp  EngineServerHandler.h  FleetView.cpp  FleetView.h  FleetView.ui  FleetViewWT.cpp  FleetViewWT.h  FleetsView.cpp  FleetsView.h  Logger.cpp  Logger.h  LuaTools.cpp  LuaTools.h  LuaUniverse.cpp  LuaUniverse.h  MainForm.cpp  MainForm.h  MessageView.cpp  MessageView.h  Model.cpp  Model.h  NameGen.cpp  NameGen.h  OutPage.cpp  OutPage.h  PTreeLuaHelper.cpp  PTreeLuaHelper.h  PlanetView.cpp  PlanetView.h  PlanetView.ui  PlanetViewWT.cpp  (+51 more)
src/Polua/: Call.h  Class.h  Core.h  Detail.h  Ref.h  RegFunc.h  State.h
src/Polua/Indexer/: boost_array.h  std_vector.h
src/gen-cpp/: EngineServer.cpp  EngineServer.h  EngineServer_server.skeleton.cpp  thrift_constants.cpp  thrift_constants.h  thrift_types.cpp  thrift_types.h
src/gen_py/thrift/: EngineServer-remote  EngineServer.py  __init__.py  constants.py  ttypes.py
src/luabind/: stl_container_adapter.cpp
src/luabind/luabind/: stl_container_converter.hpp
src/luabind/luabind/detail/: stl_container_adapter.hpp
versioned_static/: bootstrap_less_variables.less  format.css  magic-bootstrap.css
versioned_static/blockly_adds/generators/: lua.js
versioned_static/blockly_adds/generators/lua/: control.js  lists.js  logic.js  math.js  procedures.js  text.js  variables.js
versioned_static/blockly_adds/language/common/: dronewars.js  dronewars_Coord.js  dronewars_Fleet.js  dronewars_FleetAction.js  dronewars_Planet.js  dronewars_PlanetAction.js  dronewars_Player.js  dronewars_RessourceSet.js  dronewars_tutos.js
versioned_static/blockly_adds/language/en/: dronewars.js
versioned_static/blockly_adds/language/fr/: _messages.js  dronewars.js
